--- a/css/stylesheeet.css
+++ b/css/stylesheeet.css
@@ -2,16 +2,14 @@ body {
     border: 5px solid rgb(56, 54, 54);
     margin: 0;
     padding: 0;
-    background-image: url(/images/galaxy_background.jpeg);
-    background-size: cover;
     background-color:skyblue;
 }
 .border {
     border: 5px solid rgba(70, 77, 92, 0.3);
     text-align: center;
-    font-family: fantasy;
-    color: rgba(255, 250, 250, 0.85);
-    text-shadow: 2px 3px rgb(66, 63, 68);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(229, 233, 235);
+    text-shadow: 2px 2px rgb(66, 63, 68);
     background-color: rgba(69, 83, 95, 0.4);
     box-shadow: 3px 3px rgb(49, 49, 49);
 }
@@ -34,13 +32,8 @@ button {
     box-shadow: 3px 3px rgb(49, 49, 49);
 }
 h1 {
-    font-size: 40px;
+    font-size: 55px;
 }
-/*original h2 nav styling  
-h2 {
-    font-size: 30px;
-}  
-*/
 h3, h4, h5, h6 {
     font-size: 20px;
 }
