--- a/css/stylesheeet.css
+++ b/css/stylesheeet.css
@@ -2,6 +2,9 @@ body {
     border: 5px solid rgb(56, 54, 54);
     margin: 0;
     padding: 0;
+    background-image: url(/images/fabian-gieske-cbIKeuURaq8-unsplash.jpg);
+    /*Photo credit: Photo by <a href="https://unsplash.com/@fbngsk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Fabian Gieske</a> on <a href="https://unsplash.com/s/photos/paw-print-background?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>*/
+    background-size: cover;
     background-color:skyblue;
 }
 .border {
@@ -25,7 +28,7 @@ button {
     border-radius: 10px;
     width: 150%;
     height: 55px;
-    font-family: fantasy;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     color: rgba(255, 250, 250, 0.85);
     text-shadow: 2px 3px rgb(66, 63, 68);
@@ -54,7 +57,7 @@ ul {
     width: 95%;
     margin: 0;
     padding: 15px;
-    padding-left: 5%;
+    padding-left: 12%;
     padding-right: 5%;
     overflow: hidden;
     float: left;
