--- a/css/contact.css
+++ b/css/contact.css
@@ -5,8 +5,25 @@ body {
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
+.contactInfo{
+    width: 45%;
+    background-color:rgba(70, 131, 180, 0.5);
+    padding-top: 5px;
+    padding-bottom: 25px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+    padding-left: 20px;
+}
+h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 20px;
+}
 input {
-    width: 25%;
+    width: 45%;
     height: 30px;
     padding: 5px;
     box-sizing: border-box;
@@ -18,7 +35,7 @@ input {
     color:rgba(89, 90, 92, 0.856)
 }
 textarea {
-    width: 25%;
+    width: 45%;
     height: 150px;
     padding: 7px;
     box-sizing: border-box;
@@ -36,3 +53,16 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: steelblue;
 }
+a:link {
+    color:rgba(2, 2, 2, 0.85);
+}
+a:visited {
+    color: rgba(78, 67, 107, 0.85);
+}
+a:active {
+    color: rgba(255, 250, 250, 0.85);
+}
+a:hover {
+    color: rgb(65, 29, 163);
+}
+
